[package]
name = "keyls"
version = "0.1.0"
edition = "2021"
authors = ["Ximon Eighteen <ximon.eighteen@gmail.com>"]
description = "Crpytographic token key lister"
repository = "https://github.com/NLnetLabs/keyls/"
keywords = ["KMIP", "PKCS#11"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
cryptoki = "^0.3"
env_logger = "0.9"
hex = "0.4"
kmip = { package = "kmip-protocol", version = "0.4", features = ["tls-with-openssl-vendored"] }
log = "0.4"
prettytable-rs = "0.10"
clap = { version = "4.5", features = ["derive"] }
